Implementing bar code generation (visible barcodes are displayed now)

--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\src\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\BarcodeGenerationTests\" />
+  </ItemGroup>
+
 </Project>
